dhall/tests/type-inference/failure/unit/IfBranchesNotType.txt
Type error: error: IfBranchMustBeTerm
 --> <current file>:1:1
  |
1 | if True then Type else Type
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ IfBranchMustBeTerm
  |
